0.54 (11.28.2005) - John Siracusa <siracusa@mindspring.com>

    * Added SQLite support.
    * Improved aut-detection of primary key sequence names.
    * Made the primary key sequence name configurable.
    * Fixed a bug in the MySQL foreign key auto-init system
      (reported by Bernhard Graf).

0.53 (11.22.2005) - John Siracusa <siracusa@mindspring.com>

    * Improved handling of table and column names that use 
      reserved words.

0.52 (11.21.2005) - John Siracusa <siracusa@mindspring.com>

    * Fixed bugs in loader when using a DSN instead of a db.

0.51 (11.20.2005) - John Siracusa <siracusa@mindspring.com>

    * Added auto-initialization of relationships.
    * Added loader.

0.50 (11.17.2005) - John Siracusa <siracusa@mindspring.com>

    * Added optional lazy-loading of column values.
    * Long-overdue version number bump.

0.081 (11.15.2005) - John Siracusa <siracusa@mindspring.com>

    * Tutorial added.

0.080 (11.14.2005) - John Siracusa <siracusa@mindspring.com>

    * Added column triggers for get, set, load, save, inflate, and deflate.
    * Added support for new argument types to relationship methods.
    * Added a named, configurable map for convention manager classes.
    * Added perl_manager_class() and make_manager_class() meta methods.
    * Many bug fixes to datetime column methods, cross-database migration,
      and the auto-init system.

0.079 (10.25.2005) - John Siracusa <siracusa@mindspring.com>

    * Fixed bugs that caused auto-inited many-to-many relationships
      to be inadequately fleshed-out under some circumstances.

0.078 (10.24.2005) - John Siracusa <siracusa@mindspring.com>

    * Added page and per_page manager parameters for the truly lazy.
    * Fixed a bug caused by a conflict between the convention manager
      and the legacy foreign key name generator.

0.077 (10.20.2005) - John Siracusa <siracusa@mindspring.com>

    * Added convention manager.
    * Added "distinct" and "fetch_only" manager parameters.