@@ -3,8 +3,11 @@
     * Added SQLite support.
     * Improved aut-detection of primary key sequence names.
     * Made the primary key sequence name configurable.
-    * Fixed a bug in the MySQL foreign key auto-init system
-      (reported by Bernhard Graf).
+    * Fixed a bug in the MySQL foreign key auto-init system.
+      (Reported by Bernhard Graf)
+    * Fixed a bug in the column type class customization system that
+      caused it to fail when combined with auto-initialization.
+      (Reported by Bernhard Graf)
 
 0.53 (11.22.2005) - John Siracusa <siracusa@mindspring.com>
 
